src/test/ui/feature-gates/feature-gate-register_attr.rs
#![register_attr(attr)] //~ ERROR the `#[register_attr]` attribute is an experimental feature

fn main() {}
